<resources>

    <string name="app_name">Hifi</string>
    <string name="login">login</string>
    <string name="do_not_have_an_account">Create An Account</string>
    <string name="signup">Sign up</string>
    <string name="already_have_an_account">Have an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="desc">image</string>
    <string name="TODO">TODO</string>
    <string name="from">From</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="Home">Home</string>
    <string name="History">Hidtory</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="join">Join</string>
    <string name="share">Share</string>
    <string name="roomcode">Room Code</string>
    <string name="weareunited">Heyy there, we are connected!</string>

    <string name="sharethecodewithyourfriendstostartavideocall">Share this code with your friends to start a video call:</string>
</resources>