<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    tools:context=".login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/lightcream"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/desc"
                app:srcCompat="@drawable/logo" />

            <ImageView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/desc"
                app:srcCompat="@drawable/appname" />

            <EditText
                android:id="@+id/emailBox"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="username"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/mail"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorLink="#9C27B0" />

            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:autofillHints="username"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/pass"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorLink="#9C27B0" />

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/ForgotPassword" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/buttonstyle"
                android:paddingLeft="12dp"
                android:paddingTop="3dp"
                android:paddingRight="12dp"
                android:paddingBottom="3dp"
                android:text="@string/login" />

            <Button
                android:id="@+id/createBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/do_not_have_an_account" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>