<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginBtn2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_pink"
        tools:context=".login">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/dashback" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/dashboardcolor"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/lightcream"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/desc"
                    app:srcCompat="@drawable/logo" />

                <ImageView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/desc"
                    app:srcCompat="@drawable/appname" />

                <EditText
                    android:id="@+id/usernameBox"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="username"
                    android:background="@drawable/textbox"
                    android:drawableStart="@drawable/user"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/emailBox2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="username"
                    android:background="@drawable/textbox"
                    android:drawableStart="@drawable/mail"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/passwordBox2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="username"
                    android:background="@drawable/textbox"
                    android:drawableStart="@drawable/pass"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/signupBtn"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/buttonstyle"
                    android:paddingLeft="12dp"
                    android:paddingTop="3dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="3dp"
                    android:text="@string/signup" />

                <Button
                    android:id="@+id/login2Btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/buttonstyle"
                    android:text="@string/already_have_an_account" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>