<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dashboardcolor"
    tools:context=".dashboard">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/dashback" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menubar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dashboardcolor"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:layout_marginEnd="26dp"
        app:cardBackgroundColor="@color/dashboardcolor"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menubar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menubar">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bcwhite" />

        <ImageView
            android:id="@+id/logo3"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="200dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/sharethecodewithyourfriendstostartavideocall"
                android:textColor="@color/grey_text"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/codeBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/roomcode"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:password="false"
                android:textColor="@color/purple_200"
                android:textColorHint="@color/hint_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/joinBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonstyle"
                    android:text="@string/join" />

                <Button
                    android:id="@+id/shareBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonstyle"
                    android:text="@string/share" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>